[package]
name = "wow_srp"
description = "Server and client library for the World of Warcraft flavor of SRP6 with support for reconnection."
license = "MIT OR Apache-2.0"
repository = "https://www.github.com/gtker/wow_srp"
keywords = ["wow", "world-of-warcraft", "srp6", "authentication", "login"]
categories = ["authentication", "cryptography", "game-development", "game-engines"]
readme = "README.md"
version = "0.5.3" # Remember to update docs in src/lib.rs, and README.md
authors = ["Gtker <github@gtker.com"]
edition = "2018"
rust-version = "1.65.0"

exclude = [".github", "release.toml"]

[features]
default = ["srp-default-math", "tbc-header", "wrath-header"]
srp-default-math = ["num-bigint"]
srp-fast-math = ["rug"]
tbc-header = ["hmac"]
wrath-header = ["rc4", "hmac"]

[dependencies.sha-1]
# Required for SRP6 algorithm
version = "0.10.0"
default-features = false

[dependencies.rc4]
# Required for Wrath header crypto
version = "0.1.0"
optional = true

[dependencies.hmac]
# Required for Wrath header crypto
version = "0.12.1"
optional = true

[dependencies.rand]
# Required for generating private keys
version = "0.8"

[dependencies.num-bigint]
# Required for SRP6 algorithm.
version = "0.4"
default-features = false
optional = true

[dependencies.rug]
# rug is ~100% faster than num-bigint (50% reduced time used) but is not
# pure Rust so it has external dependencies.
version = "1.13"
features = ["integer"]
default-features = false
optional = true

[dev-dependencies.criterion]
# Required for benchmarking.
version = "0.3"

[[bench]]
name = "benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
